# agent-poc

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp.json  render.yaml
.sfdx/mcp-tools/: index.json
.sfdx/mcp-tools/tools/: fetch_lds_graphql_schema.json  test_lds_graphql_query.json
backend/: Dockerfile  Dockerfile.mcp  agent.py  bumblebee_scanner.py  config.py  fixtures.py  main.py  mcp_server.py  prompts.py  pyproject.toml  scan_mcp_tools.py  scan_routes.py
chatbot-widget/: angular.json  build-bundle.mjs  package-lock.json  package.json
chatbot-widget/src/: index.html  main.ts
chatbot-widget/src/app/: chatbot.component.html  chatbot.component.scss  chatbot.component.ts  format-message.pipe.ts
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/components/agent-response/: agent-response.component.html  (+2 more)
frontend/src/app/models/: asset.model.ts  scan.model.ts
frontend/src/app/services/: agent-api.service.ts  asset-state.service.ts  scan-api.service.ts
frontend/src/assets/: agentrix-chat.js
frontend/src/environments/: environment.ts
graphify-out/: .graphify_python  .graphify_root  .graphify_semantic_marker  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-05-27/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: start-hf-space.sh
(+21 files in other folders)
