[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "fastmcp>=2.0.0",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-mcp-adapters>=0.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]
